rails-task-manager partie 5

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,12 @@
 <h1>My tasks</h1>
 
 <ul> <% @tasks.each do |task| %>
-<li> <input type="checkbox">
+<li> 
+<% if task.completed %> 
+  <input type="checkbox" checked>
+<% else %>
+  <input type="checkbox">
+<% end %>
 <%= link_to task.title, task_path(task) %> 
 </li>
 <% end %> </ul> 
