rails-task-manager with a bit of bootstrap

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,14 +1,25 @@
-<h1>My tasks</h1>
+<h1>My tasks 📝</h1>
+<br>
 
-<ul> <% @tasks.each do |task| %>
-<li> 
-<% if task.completed %> 
-  <input type="checkbox" checked>
-<% else %>
-  <input type="checkbox">
-<% end %>
-<%= link_to task.title, task_path(task) %> 
-</li>
-<% end %> </ul> 
+<div class="container">
+  <ul class="list-inline"> <% @tasks.each do |task| %>
+    <li> 
+      <% if task.completed %> 
+        <input type="checkbox" checked>
+       <% else %>
+        <input type="checkbox">
+      <% end %>
+      <%= link_to task.title, task_path(task) %>
+      <%= link_to "🗑️",
+              task_path(task),
+              method: :delete,
+              data: { confirm: "Are you sure?" } %>
+      <% end %> 
+      </li> </ul> 
+  
+    <br>
+    <%= link_to(tasks_new_path) do %>
+    <p> ➕ Add a new task </p>
+    <% end %>
 
-<%= link_to "Create a new task", tasks_new_path %>
+</div>
