--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,11 +1,5 @@
-<h1> Edit <%= @task.title %> </h1>
+<h2> Edit <%= @task.title %> </h2>
 
-<%= form_for(@task) do |f| %>
-<%= f.label :title %> 
-<%= f.text_field :title %>
-<%= f.label :detail %>
-<%= f.text_field :detail %>
-<%= f.label :completed %>
-<%= f.check_box :completed %>
-<%= f.submit%>
-<% end %> 
+<div class="container">
+  <%= render "form", task: @task %>
+</div>
