rails-task-manager with a bit of bootstrap 2

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,7 +19,7 @@
   
     <br>
     <%= link_to(tasks_new_path) do %>
-    <p> ➕ Add a new task </p>
+    <button type="button" class="btn btn-light">➕ Add a new task</button>
     <% end %>
 
 </div>
